fix: address review feedback on Error Handler execution history grouping
Use ObjectMapperSetupExtension in TaskExecutionDTOTest instead of a
static MapUtils initializer, preserve try/error branch slot ordering
when one branch has no tasks, and add test coverage for the error-only
branch case.

Co-authored-by: Cursor <cursoragent@cursor.com>