@@ -21,20 +21,17 @@ import static org.junit.jupiter.api.Assertions.assertTrue;
 
 import com.bytechef.atlas.configuration.domain.WorkflowTask;
 import com.bytechef.atlas.execution.domain.TaskExecution;
-import com.bytechef.commons.util.MapUtils;
+import com.bytechef.test.extension.ObjectMapperSetupExtension;
 import java.util.List;
 import java.util.Map;
 import org.junit.jupiter.api.Test;
-import tools.jackson.databind.json.JsonMapper;
+import org.junit.jupiter.api.extension.ExtendWith;
 
 /**
  * @author Anshul Goel
  */
+@ExtendWith(ObjectMapperSetupExtension.class)
 class TaskExecutionDTOTest {
-
-    static {
-        MapUtils.setObjectMapper(JsonMapper.builder().build());
-    }
 
     @Test
     void buildHierarchyShouldGroupOnErrorDispatcherTasksByBranch() {
@@ -76,11 +73,71 @@ class TaskExecutionDTOTest {
 
         TaskExecutionDTO onErrorTaskExecutionDTO = hierarchy.getFirst();
 
-        assertTrue(onErrorTaskExecutionDTO.children().isEmpty());
-        assertEquals(2, onErrorTaskExecutionDTO.iterations().size());
-        assertEquals(1, onErrorTaskExecutionDTO.iterations().get(0).size());
-        assertEquals("mainTask", onErrorTaskExecutionDTO.iterations().get(0).getFirst().workflowTask().getName());
-        assertEquals(1, onErrorTaskExecutionDTO.iterations().get(1).size());
-        assertEquals("errorTask", onErrorTaskExecutionDTO.iterations().get(1).getFirst().workflowTask().getName());
+        assertTrue(onErrorTaskExecutionDTO.children()
+            .isEmpty());
+        assertEquals(2, onErrorTaskExecutionDTO.iterations()
+            .size());
+        assertEquals(1, onErrorTaskExecutionDTO.iterations()
+            .get(0)
+            .size());
+        assertEquals("mainTask", onErrorTaskExecutionDTO.iterations()
+            .get(0)
+            .getFirst()
+            .workflowTask()
+            .getName());
+        assertEquals(1, onErrorTaskExecutionDTO.iterations()
+            .get(1)
+            .size());
+        assertEquals("errorTask", onErrorTaskExecutionDTO.iterations()
+            .get(1)
+            .getFirst()
+            .workflowTask()
+            .getName());
+    }
+
+    @Test
+    void buildHierarchyShouldPreserveBranchOrderWhenOnlyErrorBranchHasTasks() {
+        WorkflowTask onErrorWorkflowTask = new WorkflowTask(
+            Map.of(
+                "name", "onError",
+                "type", "on-error/v1",
+                "parameters", Map.of(
+                    "main-branch", List.of(
+                        Map.of("name", "mainTask", "type", "test/v1")),
+                    "on-error-branch", List.of(
+                        Map.of("name", "errorTask", "type", "test/v1")))));
+
+        TaskExecution onErrorTaskExecution = TaskExecution.builder()
+            .id(1L)
+            .workflowTask(onErrorWorkflowTask)
+            .build();
+
+        TaskExecution errorTaskExecution = TaskExecution.builder()
+            .id(2L)
+            .parentId(1L)
+            .workflowTask(new WorkflowTask(Map.of("name", "errorTask", "type", "test/v1")))
+            .build();
+
+        List<TaskExecutionDTO> flatTaskExecutions = List.of(
+            new TaskExecutionDTO(onErrorTaskExecution, "On Error", "icon", Map.of(), null, null),
+            new TaskExecutionDTO(errorTaskExecution, "Error Task", "icon", Map.of(), null, null));
+
+        List<TaskExecutionDTO> hierarchy = TaskExecutionDTO.buildHierarchy(flatTaskExecutions);
+
+        TaskExecutionDTO onErrorTaskExecutionDTO = hierarchy.getFirst();
+
+        assertEquals(2, onErrorTaskExecutionDTO.iterations()
+            .size());
+        assertTrue(onErrorTaskExecutionDTO.iterations()
+            .get(0)
+            .isEmpty());
+        assertEquals(1, onErrorTaskExecutionDTO.iterations()
+            .get(1)
+            .size());
+        assertEquals("errorTask", onErrorTaskExecutionDTO.iterations()
+            .get(1)
+            .getFirst()
+            .workflowTask()
+            .getName());
     }
 }
